# ChickenBot

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  example.env  pom.xml
Chicken Bot/: DONG.json  DONG.txt  SummarizeIgnore.txt  presences.txt  settings.json
Chicken Bot/reactions/: whatareyoudoing.txt
java/com/darkzek/SheepBot/: ChickenBot.java  CommandManager.java  Settings.java  Trigger.java
java/com/darkzek/SheepBot/Commands/: Allegedly.java  Command.java  CommandLoader.java  GNULinux.java  Help.java  LMGTFY.java  Purge.java  Search.java  UnixPorn.java
java/com/darkzek/SheepBot/Enums/: CommandType.java  MessageType.java  TriggerType.java
migrations/2022-01-24-081035_create_servers/: up.sql
migrations/2022-02-06-003521_add_distance_conversion/: down.sql  up.sql
migrations/2022-02-16-233841_add_summarize/: down.sql  up.sql
old_src/main/java/com/darkzek/ChickenBot/: ErrorReport.java  PresenceMessage.java  Reactions.java  RedditPost.java  Settings.java  Trigger.java  Version.java
old_src/main/java/karimo94/: Summarizer.java
src/: error.rs  main.rs  presence.rs  reactions.rs  settings.rs
src/commands/: banter.rs  chat.rs  command.rs  delete_commands.rs  distance_conversion.rs  dong.rs  errors.rs  help.rs  invite.rs  meme.rs  mod.rs  settings.rs  summarize.rs
src/commands/help/: changelog.rs  mod.rs  update.rs
src/db/: mod.rs  models.rs  schema.rs
src/main/java/com/darkzek/ChickenBot/: AntiDeathtrap.java  ChickenBot.java  ErrorReport.java  (+7 more)
src/main/java/karimo94/: Summarizer.java
src/modules/: meme_cache.rs  mod.rs  summarizer.rs
(+48 files in other folders)
