[package]
name = "chicken_bot"
version = "0.1.0"
edition = "2018"
authors = ["Marshall Scott <mashdowne@hotmail.co.nz>"]

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.52"
futures = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = "0.11.8"
chrono = "0.4.19"
rand = "0.7.3"
fancy-regex = "0.7.1"
html5ever = "0.25.1"
markup5ever_rcdom = "0.1.0"
lazy_static = "1.4.0"